fix remaining non-at errors